### Test Case 1: Quiz Flow for New User
### Objective:** Verify that the quiz flow works correctly for a newly created and logged-in user.

appId: com.example.nudgetest_demoqa1
flows:
  - name: Start Quiz for New User
---
- steps: 
- launchApp:
    appId: com.example.nudgetest_demoqa1

- tapOn: 
    text: Track Quiz

- extendedWaitUntil:
    visible: "Start Quiz" 
    timeout: 10000

- assertExists:
          text: "START QUIZ"  
          timeout: 5000

- tapOn: 
    text: START QUIZ

- tapOn: 
    text: c) Paris

- tapOn: 
    text: b) Oxygen

- tapOn: 
     text: c) William Shakespeare

- tapOn: 
    text: c) Jupiter

- tapOn:
    text: c) 2

- tapOn: 
    text: b) 1912

- tapOn: 
    text: c) Leonardo da Vinci

- tapOn: 
    text: b) Avocado

- tapOn: 
    text: b) Japan

- tapOn: 
    text: a) 0

- tapOn:
    point: 50%,54%

- tapOn: 
    text: MY REWARDS

- tapOn:
    point: 27%,40%

- assertVisible: 
    text: |-
      KalpanaQASTATICREwards
      Coupon Code
      REGRESSIONCOUPON10%

- tapOn:
    point: 50%,49%

- tapOn:
    point: 49%,3%

- assertVisible:
    id: android:id/content

- assertVisible: 
    text: "BACK TO HOME"

